# Urllib

./: .gitignore  README.md  email_notificação.py  index.py  precos.py  pyproject.toml  teste.py
